task3/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-server-service
spec:
  selector:
    app.kubernetes.io/name: http-server
  ports:
    - name: HTTP
      protocol: TCP
      port: 80
      targetPort: 3000
    - name: HTTPS
      protocol: TCP
      port: 443
      targetPort: 3001
